--- a/EduClass.Web/Web.config
+++ b/EduClass.Web/Web.config
@@ -10,7 +10,7 @@
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <connectionStrings>
-    <add name="EduClassContext" connectionString="metadata=res://*/EduClassModel.csdl|res://*/EduClassModel.ssdl|res://*/EduClassModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FX-8320;initial catalog=dbEduclass;user id=sa;password=1qazxc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EduClassContext" connectionString="metadata=res://*/EduClassModel.csdl|res://*/EduClassModel.ssdl|res://*/EduClassModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JVOLPE;initial catalog=dbEduclass;user id=sa;password=1qazxc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 	<log4net debug="true">
 		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
@@ -34,6 +34,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="DropboxAppKey" value="92tyy5vbjfv9nvr" />
+    <add key="DropboxAppSecret" value="g03curirllom77x" />
   <add key="MvcMailer.BaseURL" value="" /></appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -95,7 +97,8 @@
     </providers>
   </entityFramework>
 <system.net>
-		<mailSettings>
+ 
+  <mailSettings>
 			<!-- Method#1: Configure smtp server credentials -->
 			<smtp from="mail.edu.class@gmail.com">
 				<network enableSsl="true" host="smtp.gmail.com" port="587" userName="mail.edu.class@gmail.com" password="Password225" />
