--- a/EduClass.Web/packages.config
+++ b/EduClass.Web/packages.config
@@ -8,7 +8,7 @@
   <package id="bootstrap.less" version="3.3.5" targetFramework="net452" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.15.35.1" targetFramework="net452" />
   <package id="DotNetZip" version="1.9.8" targetFramework="net452" />
-  <package id="Dropbox.Api" version="3.0.0" targetFramework="net452" />
+  <package id="DropNet" version="1.10.23.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="jQuery" version="2.1.4" targetFramework="net452" />
   <package id="jQuery.Fullcalendar" version="2.4.0" targetFramework="net452" />
@@ -29,6 +29,7 @@
   <package id="MvcMailer" version="4.5" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
+  <package id="RestSharp" version="105.0.1" targetFramework="net452" />
   <package id="T4Scaffolding.Core" version="1.0.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
