--- a/EduClass.Web/packages.config
+++ b/EduClass.Web/packages.config
@@ -7,6 +7,7 @@
   <package id="bootstrap" version="3.3.5" targetFramework="net452" />
   <package id="bootstrap.less" version="3.3.5" targetFramework="net452" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.15.35.1" targetFramework="net452" />
+  <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.15.35" targetFramework="net452" />
   <package id="DotNetZip" version="1.9.8" targetFramework="net452" />
   <package id="DropNet" version="1.10.23.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
