--- a/EduClass.WebApi/Web.config
+++ b/EduClass.WebApi/Web.config
@@ -9,11 +9,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="EduClassContext" connectionString="metadata=res://*/EduClassModel.csdl|res://*/EduClassModel.ssdl|res://*/EduClassModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=JVOLPE;initial catalog=dbEduclass;user id=sa;password=1qazxc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EduClassContext" connectionString="metadata=res://*/EduClassModel.csdl|res://*/EduClassModel.ssdl|res://*/EduClassModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=FX-8320;initial catalog=dbEduclass;user id=sa;password=1qazxc;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
   </connectionStrings>
   <appSettings>
-    <add key="ServerPath" value="C:\Users\jvolpe\Documents\Cosas\edu.class\EduClass.Web" />
+    <add key="ServerPath" value="C:\Users\Schuan\Documents\edu.class\EduClass.Web" />
+    <add key="UrlServer" value="http://localhost:55555" />
+  <add key="MvcMailer.BaseURL" value="" />
   </appSettings>
   
   <!--
@@ -78,7 +80,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
@@ -104,4 +106,19 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<system.net>
+  <mailSettings>
+    <!-- Method#1: Configure smtp server credentials -->
+    <smtp from="mail.edu.class@gmail.com">
+      <network enableSsl="true" host="smtp.gmail.com" port="587" userName="mail.edu.class@gmail.com" password="Password225" />
+    </smtp>
+
+    <!-- Method#2: Dump emails to a local directory -->
+    <!--
+			<smtp from="some-email@gmail.com" deliveryMethod="SpecifiedPickupDirectory">
+				<network host="localhost" />
+				<specifiedPickupDirectory pickupDirectoryLocation="c:\temp\"/>
+			</smtp>
+			-->
+  </mailSettings>
+	</system.net></configuration>
